Add images and cleanup dependencies

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     {
       "name": "Paal Soberg",
-      "email": "psobery@inviqa.com"
+      "email": "psoberg@inviqa.com"
     }
   ]
 }
