MAGEP-15: Pre-pending module- to the composer.json module name
In order for the module unit test to be found we need the module to have "module-"
in the name as this will match the path specified in:
dev/tests/unit/phpunit.xml.dist

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mx/helper-bar",
+  "name": "mx/module-helper-bar",
   "description": "N/A",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0.0",
