--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "mx/module-helper-bar",
-  "description": "N/A",
+  "description": "Displays the magento product metadata and has an integrated commandline tool with various command shortcuts.",
+  "version": "1.0.0",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0.0",
     "magento/module-backend": "100.1.*",
