--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,29 @@
   "name": "mx/module-helper-bar",
   "description": "Displays the magento product metadata and has an integrated commandline tool with various command shortcuts.",
   "version": "1.0.0",
-  "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0",
-    "magento/module-backend": "100.1.*",
-    "magento/framework": "100.1.*"
-  },
   "type": "magento2-module",
   "license": [
     "OSL-3.0",
     "AFL-3.0"
   ],
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://repo.magento.com/"
+    }
+  ],
+  "require": {
+    "php": "~5.5.0|~5.6.0|~7.0.0",
+    "magento/framework": "^100.1.0",
+    "magento/module-checkout": "^100.1.0",
+    "magento/module-eav": "^100.1.0",
+    "magento/module-developer": "^100.1.0",
+    "magento/module-config": "^100.1.0",
+    "magento/module-backend": "^100.1.0",
+    "magento/module-quote": "^100.1.0",
+    "magento/module-customer": "^100.1.0",
+    "magento/module-store": "^100.1.0"
+  },
   "autoload": {
     "files": [
       "registration.php"
